Added buble removal module by erosion

--- a/detect_colonies_move.ini
+++ b/detect_colonies_move.ini
@@ -1,7 +1,7 @@
 # ProStack scenario
 [Workspace]
 n=1
-nodes=44
+nodes=54
 
 [Node:0]
 info=0;284;1411;30;35;0;0;0;0;0;0;0;0;0;
@@ -63,20 +63,30 @@ label=INP:src
 116.1=118.1
 118.1=119.2
 119.1=120.1
-120.1=130.1;129.1;
-121.1=116.1;118.2;119.1;116.2;
+120.1=142.1
+121.1=116.1;118.2;119.1;116.2;133.1;
 125.1=126.1
 126.1=49.1
 129.1=130.2
 130.1=125.1
 131.1=53.1
 132.1=131.2
+133.1=140.1
+134.1=136.2
+135.1=134.2;137.2;138.2;140.2;141.2;
+136.1=137.1
+137.1=138.1;139.2;
+138.1=139.1
+139.1=141.1
+140.1=134.1;136.1;
+141.1=142.2
+142.1=129.1;130.1;
 
 [Node:8]
 info=0;369;436;30;35;0;0;0;0;0;0;0;0;0;
 id=-s 7,7,disk
 type=PAM
-file=.txt
+file=.any
 name=strel
 version=7.0.11
 use_metaname=0
@@ -89,7 +99,7 @@ label=strel
 info=0;119;500;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 26 -s channel1
 type=PAM
-file=.txt
+file=.any
 name=qu3dinit
 version=7.0.11
 use_metaname=0
@@ -102,7 +112,7 @@ label=qu3dinit
 info=0;45;608;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 26 -s channel1,3
 type=PAM
-file=.tif
+file=.any
 name=qumap3d
 version=7.0.11
 use_metaname=0
@@ -115,7 +125,7 @@ label=qumap3d
 info=0;55;433;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
 type=PAM
-file=.tif
+file=.any
 name=gclose
 version=7.0.11
 use_metaname=0
@@ -128,7 +138,7 @@ label=gclose
 info=0;162;586;30;50;0;0;0;0;0;0;0;0;0;
 id=-s Shape:0,0,0,2000,600000
 type=PAM
-file=.txt
+file=.any
 name=qu3dtrans
 version=7.0.11
 use_metaname=0
@@ -141,7 +151,7 @@ label=LIM_VOL
 info=0;37;916;30;50;0;0;0;0;0;0;0;0;0;
 id=
 type=PAM
-file=.tif
+file=.any
 name=chole
 version=7.0.11
 use_metaname=0
@@ -151,10 +161,10 @@ vip=0
 label=chole
 
 [Node:53]
-info=0;223;1027;30;50;0;0;0;0;0;0;0;0;1;
+info=0;223;1027;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
 type=PAM
-file=.tif
+file=.any
 name=median
 version=7.0.11
 use_metaname=0
@@ -167,7 +177,7 @@ label=MASK_FIN
 info=0;215;669;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 2
 type=PAM
-file=.tif
+file=.any
 name=gdilation
 version=7.0.11
 use_metaname=0
@@ -190,7 +200,7 @@ label=OUT:_movl
 info=0;520;1004;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
 type=PAM
-file=.tif
+file=.any
 name=gerosion
 version=7.0.11
 use_metaname=0
@@ -203,7 +213,7 @@ label=gerosion
 info=0;481;895;30;35;0;0;0;0;0;0;0;0;0;
 id=-s 3,3,square
 type=PAM
-file=.txt
+file=.any
 name=strel
 version=7.0.11
 use_metaname=0
@@ -216,7 +226,7 @@ label=strel
 info=0;500;1085;30;50;0;0;0;0;0;0;0;0;0;
 id=-s 1.0,-1.0,0.0
 type=PAM
-file=.tif
+file=.any
 name=vaff
 version=7.0.11
 use_metaname=0
@@ -229,7 +239,7 @@ label=vaff
 info=0;433;1147;30;50;0;0;0;0;0;0;0;0;0;
 id=-s white,yellow
 type=PAM
-file=.tif
+file=.any
 name=movl2
 version=7.0.11
 use_metaname=0
@@ -242,7 +252,7 @@ label=movl2
 info=0;259;1104;30;35;0;0;0;0;0;0;0;0;0;
 id=-r 6
 type=PAM
-file=.tif
+file=.any
 name=qumark3d
 version=7.0.11
 use_metaname=0
@@ -255,7 +265,7 @@ label=qumark3d
 info=0;321;1225;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
 type=PAM
-file=.tif
+file=.any
 name=gdilation
 version=7.0.11
 use_metaname=0
@@ -278,7 +288,7 @@ label=OUT:_mark
 info=0;27;1165;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 26 -s channel1
 type=PAM
-file=.txt
+file=.any
 name=qu3dinit
 version=7.0.11
 use_metaname=0
@@ -291,7 +301,7 @@ label=qu3dinit
 info=0;133;1278;30;35;0;0;0;0;0;0;0;0;0;
 id=
 type=PAM
-file=.csv
+file=.any
 name=qu3d2csv
 version=7.0.11
 use_metaname=0
@@ -324,7 +334,7 @@ label=OUT:_list
 info=0;94;975;30;50;0;0;0;0;0;0;0;0;0;
 id=%20 %20
 type=PAM
-file=.tif
+file=.any
 name=vmax
 version=7.0.11
 use_metaname=0
@@ -337,7 +347,7 @@ label=vmax
 info=0;92;708;30;35;0;0;0;0;0;0;0;0;0;
 id=-r 26 -s 4
 type=PAM
-file=.tif
+file=.any
 name=quthicken
 version=7.0.11
 use_metaname=0
@@ -350,7 +360,7 @@ label=quthicken
 info=0;39;786;30;50;0;0;0;0;0;0;0;0;0;
 id=-p 1 -s plain -r 1
 type=PAM
-file=.tif,.txt
+file=.any,.any
 name=threshold
 version=7.0.11
 use_metaname=0
@@ -363,7 +373,7 @@ label=threshold
 info=0;115;826;30;50;0;0;0;0;0;0;0;0;0;
 id=%20 %20
 type=PAM
-file=.tif
+file=.any
 name=mul
 version=7.0.11
 use_metaname=0
@@ -376,7 +386,7 @@ label=mul
 info=0;247;925;30;35;0;0;0;0;0;0;0;0;0;
 id=-s 5,5,disk
 type=PAM
-file=.txt
+file=.any
 name=strel
 version=7.0.11
 use_metaname=0
@@ -399,7 +409,7 @@ label=OUT:_lum
 info=0;15;143;30;35;0;0;0;0;0;0;0;0;0;
 id=-s transfer,0.0,0.9,0.1,0.05,1.0,1,invlog
 type=PAM
-file=.tif
+file=.any
 name=ContrastTransfer
 version=7.0.11
 use_metaname=0
@@ -412,7 +422,7 @@ label=ContrastTransfer
 info=0;17;73;30;35;0;0;0;0;0;0;0;0;0;
 id=-depth 8 -channel R -separate
 type=PAM
-file=.tif
+file=.any
 name=convert
 version=7.0.11
 use_metaname=0
@@ -425,7 +435,7 @@ label=convert
 info=0;137;70;30;35;0;0;0;0;0;0;0;0;0;
 id=
 type=PAM
-file=.tif
+file=.any
 name=heq
 version=7.0.11
 use_metaname=0
@@ -438,7 +448,7 @@ label=heq
 info=0;530;1322;30;50;0;0;0;0;0;0;0;0;0;
 id=-c 255x0x0 -f 1.0 -t 2
 type=PAM
-file=.tif
+file=.any
 name=impute_text
 version=0.0.0
 use_metaname=0
@@ -451,7 +461,7 @@ label=impute_text
 info=0;495;1363;30;35;0;0;0;0;0;0;0;0;0;
 id=
 type=PAM
-file=.jpg
+file=.any
 name=convert_jpg
 version=7.0.11
 use_metaname=0
@@ -464,7 +474,7 @@ label=convert_jpg
 info=0;165;140;30;50;0;0;0;0;0;0;0;0;0;
 id=-s 1,0,-10
 type=PAM
-file=.tif
+file=.any
 name=vaff
 version=7.0.11
 use_metaname=0
@@ -477,7 +487,7 @@ label=H-DOM
 info=0;358;138;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 8
 type=PAM
-file=.tif
+file=.any
 name=reconstruct
 version=7.0.11
 use_metaname=0
@@ -490,7 +500,7 @@ label=reconstruct
 info=0;271;176;30;50;0;0;0;0;0;0;0;0;0;
 id=-s 1,-1,0.0
 type=PAM
-file=.tif
+file=.any
 name=vaff
 version=7.0.11
 use_metaname=0
@@ -503,7 +513,7 @@ label=vaff
 info=0;204;220;30;50;0;0;0;0;0;0;0;0;0;
 id=-p 1 -s plain -r 1
 type=PAM
-file=.tif,.txt
+file=.any,.any
 name=threshold
 version=7.0.11
 use_metaname=0
@@ -516,7 +526,7 @@ label=threshold
 info=0;231;69;30;35;0;0;0;0;0;0;0;0;0;
 id=
 type=PAM
-file=.tif
+file=.any
 name=invert
 version=7.0.11
 use_metaname=0
@@ -529,7 +539,7 @@ label=invert
 info=0;44;326;30;35;0;0;0;0;0;0;0;0;0;
 id=-define convolve:scale="1^" -morphology Correlate Gaussian:-1x4.0 -depth 8
 type=PAM
-file=.tif
+file=.any
 name=correlate
 version=7.0.11
 use_metaname=0
@@ -542,7 +552,7 @@ label=GAUSS
 info=0;125;377;30;35;0;0;0;0;0;0;0;0;0;
 id=-s 25.0,75.0,100,8
 type=PAM
-file=.tif
+file=.any
 name=hystthresh
 version=7.0.11
 use_metaname=0
@@ -555,7 +565,7 @@ label=BIN
 info=0;231;284;30;35;0;0;0;0;0;0;0;0;0;
 id=-s 20,7,300
 type=PAM
-file=.tif
+file=.any
 name=houghcircle
 version=7.0.11
 use_metaname=0
@@ -568,7 +578,7 @@ label=BUBLE
 info=0;86;285;30;50;0;0;0;0;0;0;0;0;0;
 id=-s 1,-1,0.0
 type=PAM
-file=.tif
+file=.any
 name=vaff
 version=7.0.11
 use_metaname=0
@@ -581,7 +591,7 @@ label=vaff
 info=0;41;1052;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
 type=PAM
-file=.tif
+file=.any
 name=gerosion
 version=7.0.11
 use_metaname=0
@@ -594,7 +604,7 @@ label=gerosion
 info=0;128;1034;30;35;0;0;0;0;0;0;0;0;0;
 id=-s 3,3,square
 type=PAM
-file=.txt
+file=.any
 name=strel
 version=7.0.11
 use_metaname=0
@@ -602,3 +612,133 @@ server=default
 delay=600
 vip=0
 label=strel
+
+[Node:133]
+info=0;386;76;30;50;0;0;0;0;0;0;0;0;0;
+id=-p 1 -s otsu -r 1
+type=PAM
+file=.any,.any
+name=threshold
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=threshold
+
+[Node:134]
+info=0;427;171;30;50;0;0;0;0;0;0;0;0;0;
+id=-r 5
+type=PAM
+file=.any
+name=gerosion
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=1
+label=gerosion
+
+[Node:135]
+info=0;560;162;30;35;0;0;0;0;0;0;0;0;0;
+id=-s 3,3,square
+type=PAM
+file=.any
+name=strel
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=strel
+
+[Node:136]
+info=0;401;226;30;50;0;0;0;0;0;0;0;0;0;
+id=-r 8
+type=PAM
+file=.any
+name=reconstruct
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=reconstruct
+
+[Node:137]
+info=0;512;315;30;50;0;0;0;0;0;0;0;0;0;
+id=-r 1
+type=PAM
+file=.any
+name=gclose
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=gclose
+
+[Node:138]
+info=0;436;429;30;50;0;0;0;0;0;0;0;0;0;
+id=
+type=PAM
+file=.any
+name=chole
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=chole
+
+[Node:139]
+info=0;499;472;30;50;0;0;0;0;0;0;0;0;0;
+id=%20 %20
+type=PAM
+file=.any
+name=vmax
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=vmax
+
+[Node:140]
+info=0;501;61;30;50;0;0;0;0;0;0;0;0;0;
+id=-r 1
+type=PAM
+file=.any
+name=gclose
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=gclose
+
+[Node:141]
+info=0;444;538;30;50;0;0;0;0;0;0;0;0;0;
+id=-r 2
+type=PAM
+file=.any
+name=gdilation
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=1
+label=gdilation
+
+[Node:142]
+info=0;308;310;30;50;0;0;0;0;0;0;0;0;0;
+id=%20 %20
+type=PAM
+file=.any
+name=mul
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=0
+label=mul
