--- a/detect_colonies_move.ini
+++ b/detect_colonies_move.ini
@@ -1,7 +1,7 @@
 # ProStack scenario
 [Workspace]
 n=1
-nodes=54
+nodes=47
 
 [Node:0]
 info=0;284;1411;30;35;0;0;0;0;0;0;0;0;0;
@@ -16,7 +16,7 @@ label=OUT:_mask
 [default]
 name=default
 host=localhost
-port=7778
+port=7001
 address=/
 proto=door
 login=
@@ -34,26 +34,19 @@ label=INP:src
 
 [Connections]
 2.1=93.1
-8.1=49.2;51.2;79.2;54.2;
-44.1=50.1;50.2;
-45.1=54.1;86.1;
-49.1=44.2;45.1;44.1;
-50.1=45.2
+8.1=49.2;51.2;144.1;
+49.1=143.1
 51.1=85.1
-53.1=0.1;75.1;73.1;78.1;81.2;
-54.1=88.2
+53.1=0.1;75.1;73.1;81.2;
 73.1=75.2
 74.1=73.2
 75.1=76.2
 76.1=112.1
-78.1=79.1
-79.1=80.1
-81.1=82.1;84.1;
+81.1=82.1
 82.1=83.1;112.2;
 85.1=131.1
 86.1=87.1
-87.1=88.1
-88.1=85.2;51.1;
+87.1=85.2;51.1;
 89.1=53.2
 92.1=91.1;76.1;81.1;
 93.1=92.1;99.1;
@@ -81,6 +74,8 @@ label=INP:src
 140.1=134.1;136.1;
 141.1=142.2
 142.1=129.1;130.1;
+143.1=86.1
+144.1=143.2
 
 [Node:8]
 info=0;369;436;30;35;0;0;0;0;0;0;0;0;0;
@@ -95,32 +90,6 @@ delay=600
 vip=0
 label=strel
 
-[Node:44]
-info=0;119;500;30;50;0;0;0;0;0;0;0;0;0;
-id=-r 26 -s channel1
-type=PAM
-file=.any
-name=qu3dinit
-version=7.0.11
-use_metaname=0
-server=default
-delay=6000
-vip=0
-label=qu3dinit
-
-[Node:45]
-info=0;45;608;30;50;0;0;0;0;0;0;0;0;0;
-id=-r 26 -s channel1,3
-type=PAM
-file=.any
-name=qumap3d
-version=7.0.11
-use_metaname=0
-server=default
-delay=600
-vip=0
-label=qumap3d
-
 [Node:49]
 info=0;55;433;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
@@ -133,19 +102,6 @@ server=default
 delay=600
 vip=0
 label=gclose
-
-[Node:50]
-info=0;162;586;30;50;0;0;0;0;0;0;0;0;0;
-id=-s Shape:0,0,0,2000,600000
-type=PAM
-file=.any
-name=qu3dtrans
-version=7.0.11
-use_metaname=0
-server=default
-delay=6000
-vip=1
-label=LIM_VOL
 
 [Node:51]
 info=0;37;916;30;50;0;0;0;0;0;0;0;0;0;
@@ -172,19 +128,6 @@ server=default
 delay=600
 vip=0
 label=MASK_FIN
-
-[Node:54]
-info=0;215;669;30;50;0;0;0;0;0;0;0;0;0;
-id=-r 2
-type=PAM
-file=.any
-name=gdilation
-version=7.0.11
-use_metaname=0
-server=default
-delay=600
-vip=0
-label=gdilation
 
 [Node:72]
 info=0;461;1412;30;35;0;0;0;0;0;0;0;0;0;
@@ -248,42 +191,6 @@ delay=600
 vip=0
 label=movl2
 
-[Node:78]
-info=0;259;1104;30;35;0;0;0;0;0;0;0;0;0;
-id=-r 6
-type=PAM
-file=.any
-name=qumark3d
-version=7.0.11
-use_metaname=0
-server=default
-delay=600
-vip=0
-label=qumark3d
-
-[Node:79]
-info=0;321;1225;30;50;0;0;0;0;0;0;0;0;0;
-id=-r 1
-type=PAM
-file=.any
-name=gdilation
-version=7.0.11
-use_metaname=0
-server=default
-delay=600
-vip=0
-label=gdilation
-
-[Node:80]
-info=0;374;1412;30;35;0;0;0;0;0;0;0;0;0;
-id=/mnt/wdb4/data/colony_tracking/work/20230801T171330_migration 01.08.2023 H9_CasR/W0001F0001/temp
-type=OUS
-file=_mark.tif
-server=default
-delay=600
-vip=0
-label=OUT:_mark
-
 [Node:81]
 info=0;27;1165;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 26 -s channel1
@@ -319,16 +226,6 @@ server=default
 delay=600
 vip=0
 label=OUT:_tab
-
-[Node:84]
-info=0;100;1408;30;35;0;0;0;0;0;0;0;0;0;
-id=/mnt/wdb4/data/colony_tracking/work/20230801T171330_migration 01.08.2023 H9_CasR/W0001F0001/temp
-type=OUS
-file=_list.txt
-server=default
-delay=600
-vip=0
-label=OUT:_list
 
 [Node:85]
 info=0;94;975;30;50;0;0;0;0;0;0;0;0;0;
@@ -368,19 +265,6 @@ server=default
 delay=600
 vip=0
 label=threshold
-
-[Node:88]
-info=0;115;826;30;50;0;0;0;0;0;0;0;0;0;
-id=%20 %20
-type=PAM
-file=.any
-name=mul
-version=7.0.11
-use_metaname=0
-server=default
-delay=600
-vip=0
-label=mul
 
 [Node:89]
 info=0;247;925;30;35;0;0;0;0;0;0;0;0;0;
@@ -588,7 +472,7 @@ vip=0
 label=vaff
 
 [Node:131]
-info=0;41;1052;30;50;0;0;0;0;0;0;0;0;0;
+info=0;41;1052;30;50;0;0;0;0;0;0;0;0;1;
 id=-r 1
 type=PAM
 file=.any
@@ -597,7 +481,7 @@ version=7.0.11
 use_metaname=0
 server=default
 delay=600
-vip=0
+vip=1
 label=gerosion
 
 [Node:132]
@@ -742,3 +626,29 @@ server=default
 delay=600
 vip=0
 label=mul
+
+[Node:143]
+info=0;117;605;30;50;0;0;0;0;0;0;0;0;0;
+id=-p -0.1 -s 600000,3000,accept -r 8
+type=PAM
+file=.any
+name=sselect
+version=7.0.11
+use_metaname=0
+server=default
+delay=600
+vip=1
+label=LIM_VOL
+
+[Node:144]
+info=0;167;527;30;35;0;0;0;0;0;0;0;0;0;
+id=
+type=PAM
+file=.any
+name=vstrel
+version=7.0.11
+use_metaname=0
+server=default
+delay=60
+vip=0
+label=vstrel
