Changed impute text to output jpeg directly and the upper limit for volume to 300000

--- a/detect_colonies_move.ini
+++ b/detect_colonies_move.ini
@@ -1,7 +1,7 @@
 # ProStack scenario
 [Workspace]
 n=1
-nodes=47
+nodes=46
 
 [Node:0]
 info=0;284;1411;30;35;0;0;0;0;0;0;0;0;0;
@@ -51,8 +51,7 @@ label=INP:src
 92.1=91.1;76.1;81.1;
 93.1=92.1;99.1;
 99.1=121.1
-112.1=114.1
-114.1=72.1
+112.1=72.1
 116.1=118.1
 118.1=119.2
 119.1=120.1
@@ -330,7 +329,7 @@ label=heq
 
 [Node:112]
 info=0;530;1322;30;50;0;0;0;0;0;0;0;0;0;
-id=-c 255x0x0 -f 1.0 -t 2
+id=-c 255x0x0 -f 1.0 -t 2 -w jpg
 type=PAM
 file=.any
 name=impute_text
@@ -340,19 +339,6 @@ server=default
 delay=600
 vip=0
 label=impute_text
-
-[Node:114]
-info=0;495;1363;30;35;0;0;0;0;0;0;0;0;0;
-id=
-type=PAM
-file=.any
-name=convert_jpg
-version=7.0.11
-use_metaname=0
-server=default
-delay=60
-vip=0
-label=convert_jpg
 
 [Node:116]
 info=0;165;140;30;50;0;0;0;0;0;0;0;0;0;
@@ -472,7 +458,7 @@ vip=0
 label=vaff
 
 [Node:131]
-info=0;41;1052;30;50;0;0;0;0;0;0;0;0;1;
+info=0;41;1052;30;50;0;0;0;0;0;0;0;0;0;
 id=-r 1
 type=PAM
 file=.any
@@ -628,8 +614,8 @@ vip=0
 label=mul
 
 [Node:143]
-info=0;117;605;30;50;0;0;0;0;0;0;0;0;0;
-id=-p -0.1 -s 600000,3000,accept -r 8
+info=0;117;605;30;50;0;0;0;0;0;0;0;0;1;
+id=-p -0.1 -s 300000,3000,accept -r 8
 type=PAM
 file=.any
 name=sselect
