Changed color for impute text

--- a/detect_colonies_move.ini
+++ b/detect_colonies_move.ini
@@ -1,7 +1,7 @@
 # ProStack scenario
 [Workspace]
 n=1
-nodes=46
+nodes=45
 
 [Node:0]
 info=0;284;1411;30;35;0;0;0;0;0;0;0;0;0;
@@ -26,7 +26,7 @@ password=
 info=0;80;13;30;35;0;0;0;0;0;0;0;0;0;
 id=/mnt/wdb4/data/colony_tracking/work/20230801T171330_migration 01.08.2023 H9_CasR/W0001F0001/temp/localhost:7778
 type=INS
-file=.tif
+file=.jpg
 server=default
 delay=600
 vip=0
@@ -42,8 +42,7 @@ label=INP:src
 74.1=73.2
 75.1=76.2
 76.1=112.1
-81.1=82.1
-82.1=83.1;112.2;
+81.1=112.2;83.1;
 85.1=131.1
 86.1=87.1
 87.1=85.2;51.1;
@@ -192,7 +191,7 @@ label=movl2
 
 [Node:81]
 info=0;27;1165;30;50;0;0;0;0;0;0;0;0;0;
-id=-r 26 -s channel1
+id=-r 26 -s channel1,csv
 type=PAM
 file=.any
 name=qu3dinit
@@ -202,19 +201,6 @@ server=default
 delay=6000
 vip=0
 label=qu3dinit
-
-[Node:82]
-info=0;133;1278;30;35;0;0;0;0;0;0;0;0;0;
-id=
-type=PAM
-file=.any
-name=qu3d2csv
-version=7.0.11
-use_metaname=0
-server=default
-delay=6000
-vip=0
-label=qu3d2csv
 
 [Node:83]
 info=0;204;1401;30;35;0;0;0;0;0;0;0;0;0;
@@ -329,7 +315,7 @@ label=heq
 
 [Node:112]
 info=0;530;1322;30;50;0;0;0;0;0;0;0;0;0;
-id=-c 255x0x0 -f 1.0 -t 2 -w jpg
+id=-c 255x128x0 -f 1.0 -t 2 -w jpg
 type=PAM
 file=.any
 name=impute_text
@@ -614,7 +600,7 @@ vip=0
 label=mul
 
 [Node:143]
-info=0;117;605;30;50;0;0;0;0;0;0;0;0;1;
+info=0;117;605;30;50;0;0;0;0;0;0;0;0;0;
 id=-p -0.1 -s 300000,3000,accept -r 8
 type=PAM
 file=.any
