Fixed reg stamp

--- a/detect_colonies_move.ini
+++ b/detect_colonies_move.ini
@@ -26,7 +26,7 @@ password=
 info=0;80;13;30;35;0;0;0;0;0;0;0;0;0;
 id=/mnt/wdb4/data/colony_tracking/work/20230801T171330_migration 01.08.2023 H9_CasR/W0001F0001/temp/localhost:7778
 type=INS
-file=.jpg
+file=.tif
 server=default
 delay=600
 vip=0
@@ -315,7 +315,7 @@ label=heq
 
 [Node:112]
 info=0;530;1322;30;50;0;0;0;0;0;0;0;0;0;
-id=-c 255x128x0 -f 1.0 -t 2 -w jpg
+id=-c 255x0x0 -f 1.0 -t 2 -w jpg
 type=PAM
 file=.any
 name=impute_text
